--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,378 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/buttons_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       android:gravity="center"
+        android:orientation="horizontal">
+
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_Ac"
+        style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:cornerRadius="30dp"
+
+        android:layout_margin="10dp"
+
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:text="Ac"
+        />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_openbracket"
+            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:cornerRadius="30dp"
+
+            android:layout_margin="10dp"
+
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:backgroundTint="@color/black"
+            android:text="("
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_closedbracket"
+            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:cornerRadius="30dp"
+
+            android:layout_margin="10dp"
+
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:backgroundTint="@color/black"
+            android:text=")"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_divide"
+            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:cornerRadius="30dp"
+
+            android:layout_margin="10dp"
+
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:backgroundTint="#FF0000"
+            android:text="/"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_remainder"
+            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:cornerRadius="30dp"
+
+            android:layout_margin="10dp"
+
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:backgroundTint="#FF8766"
+            android:text="%"
+            />
+
+
+
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_seven"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:text="7"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_eight"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="8"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_nine"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="9"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_multiplication"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:backgroundTint="#FF0000"
+                android:text="*"
+                />
+
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_four"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+                 android:background="@color/white"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:text="4"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_five"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="5"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_six"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="6"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_subtraction"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:backgroundTint="#FF0000"
+                android:text="-"
+                />
+
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_one"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+               android:background="@color/white"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:text="1"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_two"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="2"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_three"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="3"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_Addition"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:backgroundTint="#FF0000"
+                android:text="+"
+                />
+
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_zero"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:text="0"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_decimal"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="@color/white"
+                android:text="."
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_cancel"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:backgroundTint="#ee6789"
+                android:text="C"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_euqal"
+                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:cornerRadius="30dp"
+
+                android:layout_margin="10dp"
+
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:backgroundTint="#FF0000"
+                android:text="="
+                />
+
+
+
+
+        </LinearLayout>
+
+
+
+
+
+
+
+    </LinearLayout>
+</RelativeLayout>
